# SuperscalarSimulator

./: CMakeLists.txt  lexer.l  main.c  memory.h  memory_logic.h  parser.y
assembler/: assembler  bop.c  bop.h  calc  input.s  lex.yy.c  lexer.l  list.c  list.h  makefile  op_def.c  op_def.h  parser.tab.c  parser.tab.h  parser.y
assembler/test-suite/: fatorial.s  fibonacci.s  load_store.s  pow.s
memory/: cache.c  cache.h  memory.c  memory.h  util.h
simulator/machine/: types.h
simulator/machine/cpu/: alu.c  alu.h  cache.c  cache.h  cpu.c  cpu.h  instructions.c  instructions.h  pipeline.c  pipeline.h  registers.c  registers.h  types.h
simulator/machine/memory/: memory.c  memory.h  util.c  util.h
simulator/system/: system.c  system.h
source/: args.h  main.c
source/simulator/machine/: types.h  util.h
source/simulator/machine/cpu/: alu.c  alu.h  alu.s  bus.c  bus.h  cache.c  cache.h  cpu.c  cpu.h  instructions.c  instructions.h  pipeline.c  pipeline.h  register.c  register.h  restation.c  restation.h  rstation.c  rstation.h  types.h
source/simulator/machine/cpu/structures/: cdb_fifo.c  cdb_fifo.h  fifo.c  fifo.h  inst_fifo.c  inst_fifo.h
source/simulator/machine/memory/: memory.c  memory.h
source/simulator/machine/motherboard/: mobo.c  mobo.h
source/simulator/system/: system.c  system.h
